# deep_sleeping

./: .gitignore  README.md
dataset generator/: README.md  pyproject.toml
dataset generator/src/procmusic_dataset/: __init__.py  cli.py  config.py  generator.py  midi.py  models.py  pipeline.py
dataset generator/src/procmusic_dataset/daw/: __init__.py  flstudio.py  flstudio_export_probe.py  flstudio_probe.py  flstudio_screenshot_probe.py
dataset generator/src/procmusic_dataset/renderers/: __init__.py  base.py  reference.py  vst.py  vst_audio.py  vst_backend.py  vst_drums.py  vst_presets.py  vst_retry.py
dataset generator/tests/: test_cli.py  test_flstudio.py  test_generator.py  test_pipeline.py  test_vst_renderer.py
model/: pyproject.toml
model/configs/: default.json
model/src/procmusic_model/: __init__.py  config.py
model/src/procmusic_model/audio/: __init__.py  stft.py
model/src/procmusic_model/data/: __init__.py  dataset.py
model/src/procmusic_model/eval/: __init__.py  eval_discriminator.py  evaluate.py
model/src/procmusic_model/losses/: __init__.py  matching.py  separation.py
model/src/procmusic_model/modules/: __init__.py  decoder.py  discovery.py  discriminator.py  encoder.py  refiner.py  stop.py
model/src/procmusic_model/systems/: __init__.py  separator.py
model/src/procmusic_model/tools/: __init__.py  inspect_dataset.py  overfit_one_batch.py  render_debug_spectrogram.py  run_separation.py
model/src/procmusic_model/training/: __init__.py  checkpoint.py  train.py  train_discriminator.py
model/tests/: test_dataset.py  test_matching.py  test_model_and_train.py  test_stft.py
transfrom_midi/: README.md  edit_midi.py  generate_wav.py  pyproject.toml  transcribe_to_midi.py
